--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
         "tabWidth": 4,
         "semi": true,
         "singleQuote": false
+    },
+    "dependencies": {
+        "osrs-json-hiscores": "^2.2.0"
+    },
+    "devDependencies": {
+        "webpack": "^5.11.0",
+        "webpack-cli": "^4.2.0"
     }
 }
